--- a/package.json
+++ b/package.json
@@ -20,17 +20,22 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@react-leaflet/core": "^1.0.2",
+    "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^10.0.0",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.4.4"
   },
   "browserslist": {
     "production": [
